Refactor CORS configuration in SecurityConfig